<resources>
    <string name="app_name">D20 Roller</string>
    <string name="d4">4</string>
    <string name="d6">6</string>
    <string name="d8">8</string>
    <string name="d10">10</string>
    <string name="d12">12</string>
    <string name="d20">20</string>
    <string name="d100">100</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="defaultResult">0</string>
    <string name="addDice">add dice</string>
    <string name="totalDice">total dice</string>
    <string name="subtractDice">subtract dice</string>
    <string name="addBonus">add bonus</string>
    <string name="totalBonus">total bonus</string>
    <string name="subtractBonus">subtract bonus</string>
</resources>