<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/rollResult"
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border_bottom"
        android:paddingTop="30dp"
        android:text="@string/defaultResult"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="144sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <ImageButton
        android:id="@+id/d20"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/transparent_background"
        android:contentDescription="@string/d20"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/d12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702"
        app:srcCompat="@drawable/invertd20" />

    <ImageButton
        android:id="@+id/d8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/transparent_background"
        android:contentDescription="@string/d8"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/d10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702"
        app:srcCompat="@drawable/invertd8" />

    <ImageButton
        android:id="@+id/d10"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/transparent_background"
        android:contentDescription="@string/d10"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/d8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/d12"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702"
        app:srcCompat="@drawable/invertd10" />

    <ImageButton
        android:id="@+id/d4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/transparent_background"
        android:contentDescription="@string/d4"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/d100"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/d6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852"
        app:srcCompat="@drawable/invertd4" />

    <ImageButton
        android:id="@+id/d6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/transparent_background"
        android:contentDescription="@string/d6"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/d4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854"
        app:srcCompat="@drawable/invertd6" />

    <ImageButton
        android:id="@+id/d12"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/transparent_background"
        android:contentDescription="@string/d12"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/d10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/d20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702"
        app:srcCompat="@drawable/invertd12" />

    <ImageButton
        android:id="@+id/d100"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/transparent_background"
        android:contentDescription="@string/d100"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        android:text="@string/d100"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/d4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851"
        app:srcCompat="@drawable/invertpercent" />

    <TextView
        android:id="@+id/rollBonus"
        android:layout_width="60dp"
        android:layout_height="42dp"
        android:background="@drawable/border_bottom"
        android:contentDescription="@string/totalBonus"
        android:ems="10"
        android:inputType="number"
        android:paddingTop="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bonusAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bonusSubtract"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <ImageButton
        android:id="@+id/bonusAdd"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/transparent_background"
        android:contentDescription="@string/addBonus"
        android:scaleType="fitCenter"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rollBonus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        app:srcCompat="@drawable/invertedplus" />

    <ImageButton
        android:id="@+id/diceAdd"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/transparent_background"
        android:contentDescription="@string/addDice"
        android:scaleType="fitCenter"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bonusSubtract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/numberDice"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        app:srcCompat="@drawable/invertedplus" />

    <TextView
        android:id="@+id/numberDice"
        android:layout_width="60dp"
        android:layout_height="42dp"
        android:background="@drawable/border_bottom"
        android:contentDescription="@string/totalDice"
        android:ems="10"
        android:inputType="number"
        android:paddingTop="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/diceAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/diceSubtract"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <ImageButton
        android:id="@+id/diceSubtract"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/transparent_background"
        android:contentDescription="@string/subtractDice"
        android:scaleType="fitCenter"
        android:text="@string/minus"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/numberDice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        app:srcCompat="@drawable/invertedminus" />

    <ImageButton
        android:id="@+id/bonusSubtract"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/transparent_background"
        android:contentDescription="@string/subtractBonus"
        android:scaleType="fitCenter"
        android:text="@string/minus"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rollBonus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/diceAdd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        app:srcCompat="@drawable/invertedminus" />


</androidx.constraintlayout.widget.ConstraintLayout>